--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.tasklist.TaskEntryListActivity"/>
+        <activity android:name=".ui.tasklist.TaskEntryListActivity" />
+        <activity android:name=".ui.editenrty.EditTimeEntryActivity"></activity>
     </application>
 
 </manifest>
